--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,4 +41,14 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytest "allure generate allure-result --clean -o allure-report"
+
+    - name: Dep
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        token: ${{secrets.CI_TOKEN}}
+        branch: gh-pages
+        folder: allure-report
+        clean: true
+
+
