--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,40 +15,37 @@ permissions:
 env:
   BASE_URL: ${{secrets.BASE_URL}}
 
-
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest "allure generate allure-result --clean -o allure-report"
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Lint with flake8
+        run: |
+          # Остановить сборку, если есть синтаксические ошибки Python или неопределенные имена
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero рассматривает все ошибки как предупреждения. Редактор GitHub имеет ширину 127 символов
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Test with pytest and generate Allure report
+        run: |
+          pytest --alluredir=allure-result
+          allure generate allure-result --clean -o allure-report
+      - name: Deploy Allure report to gh-pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          token: ${{secrets.CI_TOKEN}}
+          branch: gh-pages
+          folder: allure-report
+          clean: true
 
-    - name: Dep
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        token: ${{secrets.CI_TOKEN}}
-        branch: gh-pages
-        folder: allure-report
-        clean: true
 
 
