--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -19,26 +16,30 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Lint with flake8
         run: |
-          # Остановить сборку, если есть синтаксические ошибки Python или неопределенные имена
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero рассматривает все ошибки как предупреждения. Редактор GitHub имеет ширину 127 символов
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest and generate Allure report
+
+      - name: Run tests and generate Allure report
         run: |
           pytest --alluredir=allure-result
           allure generate allure-result --clean -o allure-report
+
       - name: Deploy Allure report to gh-pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
@@ -46,6 +47,3 @@ jobs:
           branch: gh-pages
           folder: allure-report
           clean: true
-
-
-
