--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,21 +1,12 @@
-name: Python application
+name: Deploy Allure Report
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: read
-
-env:
-  BASE_URL: ${{secrets.BASE_URL}}
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,26 +21,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          [ -f requirements.txt ] && pip install -r requirements.txt
+          pip install allure-pytest
 
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
-      - name: Run tests
+      - name: Run tests and generate Allure report
         run: |
           pytest --alluredir=allure-result
 
-      - name: Generate Allure report
-        run: |
-          allure generate allure-result --clean -o allure-report
-
       - name: Deploy Allure report to gh-pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{secrets.CI_TOKEN}}
-          branch: gh-pages
-          folder: allure-report
-          clean: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-result
