--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Deploy Allure report to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.CI_TOKEN }}
           publish_dir: ./allure-result
