--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,34 +1,44 @@
-name: Deploy Allure Report
+name: UI Tests
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 jobs:
-  deploy:
+  ui-tests:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - uses: actions/checkout@v2
+
+      - name: Checkout (copy) gh-pages repository to GitHub runner
         uses: actions/checkout@v2
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          ref: gh-pages
+          path: ./.github/gh-pages
 
-      - name: Install dependencies
+      - name: Run UI-tests via docker-compose
+        env:
+          BASE_URL:${{secrets.BASE_URL}}
+
         run: |
-          python -m pip install --upgrade pip
-          pip install allure-pytest
+          pytest --alluredir=results || true
 
-      - name: Run tests and generate Allure report
+      - name: Copy history from gh-pages to allure-results
         run: |
-          pytest --alluredir=allure-result
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
-      - name: Deploy Allure report to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Generate Allure report
+        run: |
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
+
+      - name: Update Allure history
+        run: |
+          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          github_token: ${{ secrets.CI_TOKEN }}
-          publish_dir: ./allure-result
+          token: ${{ secrets.CI_TOKEN }}
+          branch: gh-pages
+          folder: allure-report
+          clean: true
