new test in yml

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Copy history from gh-pages to allure-results
         run: |
-          mkdir -p allure-results/history
-          cp -R ./.github/gh-pages/history/* allure-results/history/
+          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
