--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,10 +36,15 @@ jobs:
         run: |
           pytest || true
 
+      - name: List files in directory
+        run: |
+          ls -R ./.github/gh-pages/history/
+        shell: /usr/bin/bash -e {0}
+
       - name: Copy history from gh-pages to allure-results
         run: |
-          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
-          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
+          mkdir -p allure-results/history
+          cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report
         run: |
