--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,63 +1,70 @@
-name: Python application
+name: main-workflow
 
 on:
-  workflow_dispatch
-
-permissions:
-  contents: read
-
-env:
-  BASE_URL: ${{secrets.BASE_URL}}
+  push:
+    branches-ignore:
+      - '!master'
 
 jobs:
-  build:
+  linter:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+        env:
+          BASE_URL: {{secrets.BASE_URL}}
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: '3.x'
+
+      - name: Check code style
+        if: always()
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install flake8
+          flake8
+
+  autotests:
+    needs: linter
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
 
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run Test
+        if: always()
+        run: pytest --alluredir=allure-results
+        continue-on-error: true
 
-      - name: Test with pytest
-        run: |
-          pytest || true
-
-      - name: Create directory for history
-        run: |
-          mkdir -p ./.github/gh-pages/history/
-        shell: /usr/bin/bash -e {0}
-
-      - name: Copy history from gh-pages to allure-results
-        run: |
-          mkdir -p allure-results/history
-          cp -R ./.github/gh-pages/history/* allure-results/history/
-
-      - name: Generate Allure report
-        run: |
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
-
-      - name: Update Allure history
-        run: |
-          cp -R allure-report/history/* ./.github/gh-pages/history/
-
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          token: ${{ secrets.CI_TOKEN }}
-          branch: gh-pages
-          folder: allure-report
-          clean: true
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-results
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.CI_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
+
