--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,80 +1,30 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
-
-on:
-  workflow_dispatch
-
-permissions:
-  contents: read
+name: CI
+on: push
 
 env:
   BASE_URL: ${{secrets.BASE_URL}}
-  
 
 jobs:
-  linter:
+
+  tests:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-        env:
-          GIT_TRACE: 1
-          GIT_CURL_VERBOSE: 1
 
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+    - uses: actions/checkout@v2
 
-      - name: Check code style
-        if: always()
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install flake8
-          flake8
+    - name: Start Selenoid
+      run: docker-compose up -d selenoid
 
-  autotests:
-    needs: linter
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+    - name: Run tests
+      run: docker-compose run tests
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Generate Allure report
+      run: docker-compose run tests allure generate --clean /app/allure-results
 
-      - name: Run Test
-        if: always()
-        run: python -m pytest --alluredir=allure-results
-        continue-on-error: true
-
-      - name: Get Allure history
-        uses: actions/checkout@v2
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        with:
-          allure_results: allure-results
-          allure_history: allure-history
-
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.CI_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
-
-
+    - name: Deploy report
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.CI_TOKEN }}
+        publish_dir: ./allure-results
