--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,62 +1,60 @@
 name: ui test
 
-on: 
+on:
   workflow_dispatch:
 
 permissions:
   contents: read
 
 env:
-  BASE_URL: ${{secrets.BASE_URL}}  
+  BASE_URL: ${{secrets.BASE_URL}}
 
 jobs:
 
   test:
-
     runs-on: ubuntu-latest
-    
+
     steps:
-    
     - uses: actions/checkout@v3
 
     - name: Set up Python
-    - uses: actions/setup-python@v2.2.2
+      uses: actions/setup-python@v2.2.2
       with:
         python-version: 3.10
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest pytest-allure-adaptor
-        
+
     - name: Run tests
       run: |
         pytest --alluredir=allure-results
-        
+
     - name: Generate Allure report
       run: |
         allure generate allure-results --clean -o allure-report
-        
+
     - name: Upload Allure report artifacts
       uses: actions/upload-artifact@v3
       with:
         name: allure-report
         path: allure-report
-        
+
   deploy:
 
     needs: test
-    
+
     runs-on: ubuntu-latest
-    
+
     steps:
-    
+
     - name: Download artifact
       uses: actions/download-artifact@v3
       with:
         name: allure-report
         path: allure-report
-      
+
     - name: Deploy to Pages
       uses: peaceiris/actions-gh-pages@v3
       if: ${{ github.ref == 'refs/heads/master' }}
