--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,58 +2,68 @@ name: Python application
 
 on:
   workflow_dispatch:
-
-permissions:
-  contents: read
-
+  
 env:
   BASE_URL: ${{secrets.BASE_URL}}
 
 jobs:
+
   build:
+  
     runs-on: ubuntu-latest
     continue-on-error: true
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Run tests
-        run: |
-          pytest --alluredir=allure-results --no-failure-artifacts
-      - name: Generate report
-        run: |  
-          allure generate allure-results --clean -o allure-report
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: allure-report
-          path: allure-report
+    - uses: actions/checkout@v3
+    
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+         python-version: "3.10"
+         
+    - name: Install dependencies  
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt
+        
+    - name: Lint
+      run: |
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        
+    - name: Test  
+      run: | 
+        pytest --alluredir=allure-results --no-failure-artifacts
+        
+    - name: Generate report
+      run: |
+        allure generate allure-results --clean -o allure-report
+        
+    - name: Upload artifacts  
+      uses: actions/upload-artifact@v2
+      with:
+        name: allure-report
+        path: allure-report
 
   deploy:
-    needs: build # Исправлено: теперь зависит от задания "build"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: allure-report
+  
+    needs: build
 
-      - name: Deploy to GH Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.CI_TOKEN }}
-          external_repository: vladimirqw1221
-          publish_branch: gh-pages
-          publish_dir: allure-report
-          force_orphan: true
+    runs-on: ubuntu-latest
+
+    steps:
+    
+    - name: Download artifacts  
+      uses: actions/download-artifact@v2
+      with:
+        name: allure-report
+
+    - name: Deploy to GH Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        personal_token: ${{ secrets.CI_TOKEN }}
+        external_repository: username/repo
+        publish_branch: gh-pages  
+        publish_dir: allure-report
+        force_orphan: true
