--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,29 +31,28 @@ jobs:
       - name: Run tests
         run: |
           pytest --alluredir=allure-results 
-      - name: Generate report
-        run: |  
-          allure generate allure-results --clean -o allure-report
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        if: always()
+        continue-on-error: true
         with:
-          name: allure-report
-          path: allure-report
+          ref: gh-pages
+          path: gh-pages
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
         with:
-          name: allure-report
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
 
-      - name: Deploy to GH Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.CI_TOKEN }}
-          external_repository: vladimirqw1221/repo
-          publish_branch: gh-pages
-          publish_dir: allure-report
-          force_orphan: true
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
