--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -59,13 +59,12 @@ jobs:
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
-      - name: Send notification via telegram/slack
+      # ... предыдущие шаги
+
+      - name: Send notification
+        if: always()
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          args: |
-            *allure-notifications-${{env.version}} is now available for downloading at the link* https://github.com/${{ github.repository }}/releases/latest/download/allure-notifications-${{env.version}}.jar
-            *See Changelog here*:
-            https://github.com/${{ github.repository }}/releases/latest/
-          format: markdown
+          to: ${{ secrets.TELEGRAM_TO }}
+          message: ${{ github.workflow }} finished with status ${{ job.status }}
