--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -103,5 +103,5 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           message: >
             ${{ github.workflow }} finished with status ${{ job.status }}.
-            View Allure Report here: [Click here](${{ steps.generate-url.outputs.ALLURE_REPORT_URL }})
-
+            View Allure Report here: <a href="${{ steps.generate-url.outputs.ALLURE_REPORT_URL }}">Click here</a>
+           
