--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -91,17 +91,29 @@ jobs:
       - name: Generate Allure Report URL
         if: always()
         id: generate-url
-#        run: echo "ALLURE_REPORT_URL=https://${{ github.repository }}/gh-pages/" >> $GITHUB_ENV
-        run: echo "ALLURE_REPORT_URL=https://vladimirqw1221.github.io/example_test_e2e_bank_app/gh-pages/" >> $GITHUB_ENV
+        run: echo "ALLURE_REPORT_URL=https://example.com/allure-report" >> $GITHUB_ENV
+
+
+
 
       - name: Send notification
         if: always()
         uses: appleboy/telegram-action@master
         with:
-          debug: true
           token: ${{ secrets.TELEGRAM_TOKEN }}
           to: ${{ secrets.TELEGRAM_TO }}
-          message: >
-            ${{ github.workflow }} finished with status ${{ job.status }}.
-            View Allure Report here: <a href="${{ steps.generate-url.outputs.ALLURE_REPORT_URL }}">Click here</a>
+          message: |
+            Ссылка на отчет:
+            <a href="${{ steps.generate-url.outputs.ALLURE_REPORT_URL }}">Нажми сюда</a>
+
+#      - name: Send notification
+#        if: always()
+#        uses: appleboy/telegram-action@master
+#        with:
+#          debug: true
+#          token: ${{ secrets.TELEGRAM_TOKEN }}
+#          to: ${{ secrets.TELEGRAM_TO }}
+#          message: >
+#            ${{ github.workflow }} finished with status ${{ job.status }}.
+#            View Allure Report here: <a href="${{ steps.generate-url.outputs.ALLURE_REPORT_URL }}">Click here</a>
            
