--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -69,8 +69,9 @@ jobs:
       - name: Generate report URL
         if: always()
         run: |
-          echo "REPORT_URL=https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/$GITHUB_RUN_NUMBER/" >> $GITHUB_ENV
-      
+#          echo "REPORT_URL=https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/$GITHUB_RUN_NUMBER/" >> $GITHUB_ENV
+          echo "REPORT_URL=https://https://vladimirqw1221.github.io/example_test_e2e_bank_app/$GITHUB_RUN_NUMBER/" >> $GITHUB_ENV
+
 
       - uses: appleboy/telegram-action@master
         if: always()
