--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,13 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-#      - name: Checkout(copy) gh-pages repository to GutHub runner
-#      - uses: actions/checkout@v2
-#        with:
-#          ref: gh-pages
-#          path: ./.github/gh-pages
-#          if delete
-
       - uses: actions/checkout@v2
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
@@ -70,11 +63,10 @@ jobs:
         if: always()
         run: |
           echo "REPORT_URL=https://vladimirqw1221.github.io/example_test_e2e_bank_app/$GITHUB_RUN_NUMBER/" >> $GITHUB_ENV
-#          echo "REPORT_URL=https://$GITHUB_REPOSITORY_OWNER.github.io/$GITHUB_REPOSITORY/$GITHUB_RUN_NUMBER/" >> $GITHUB_ENV
           
 
-
-      - uses: appleboy/telegram-action@master
+      - name: Send result in telegram
+        uses: appleboy/telegram-action@master
         if: always()
         with:
           debug: true
@@ -83,23 +75,5 @@ jobs:
           message: |
             Ссылка на отчет: ${{ env.REPORT_URL }}
 
-
-#      - name: Generate Allure Report URL
-#        if: always()
-#        id: generate-url
-#        run: echo "ALLURE_REPORT_URL=https://${{ github.repository }}/gh-pages/" >> $GITHUB_ENV
-#
-#      - name: Send Telegram notification
-#        if: always()
-#        uses: appleboy/telegram-action@master
-#        with:
-#          token: ${{ secrets.TELEGRAM_TOKEN }}
-#          to: ${{ secrets.TELEGRAM_TO }}
-#          message: |
-#            Отчет готов:
-#
-#            [Посмотреть отчет](${{ steps.generate-url.outputs.ALLURE_REPORT_URL }})
-#
-#            ${{ github.workflow }} успешно выполнен!
 
 
