--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,7 @@ jobs:
           pytest --alluredir=allure-results 
 
       - name: Copy history from gh-pages to allure-results
+        if: always()
         run: |
           sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
           sudo cp -R ./.github/gh-pages/history/* allure-results/history/
