--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: CI_test
 
 on:
   workflow_dispatch:
@@ -14,16 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-       #         deleted
-
-      - name: Checkout (copy) gh-pages repository to GitHub runner
-        uses: actions/checkout@v2
-        with:
-          ref: gh-pages
-          path: ./.github/gh-pages
-
-          #         deleted
-
 
       - uses: actions/checkout@v2
       - name: Set up Python 3.10
@@ -64,17 +54,6 @@ jobs:
           allure_report: allure-report
           gh_pages: gh-pages
           allure_history: allure-history
-
-#         deleted
-      - name: Copy history
-        if: always()
-        run: |
-          if [ -d .github/gh-pages/history ]; then
-            cp -R .github/gh-pages/history/* allure-results/history/
-          fi
-
-#          deleted
-
 
       - name: Deploy report to Github Pages
         if: always()
