--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,12 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run tests
         run: |
-          pytest --alluredir=allure-results 
+          pytest --alluredir=allure-results
+      - name: Generate Link
+        if: always()
+        run: |
+          wget https://github.com/qa-guru/allure-notifications/releases/download/4.2.1/allure-notifications-4.2.1.jar java "-DconfigFile=config.json" -jar allure-notifications-4.2.1.jar
+
 
      
 
