--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Generate Link
         if: always()
         run: |
-          wget https://github.com/qa-guru/allure-notifications/releases/download/4.2.1/allure-notifications-4.2.1.jar java "-DconfigFile=config.json" -jar allure-notifications-4.2.1.jar
+          wget https://github.com/qa-guru/allure-notifications/releases/download/4.2.1/allure-notifications-4.2.1.jar
+          java "-DconfigFile=config.json" -jar allure-notifications-4.2.1.jar
 
 
      
